--- a/index.html
+++ b/index.html
@@ -23,18 +23,15 @@
         <main>
             <form action="/action_page.php">
                 <fieldset>
-                 
-                 <label for="fname">First name:</label>
-                 <input type="text" id="fname" name="fname"><br><br>
-                 <label for="lname">Last name:</label>
-                 <input type="text" id="lname" name="lname"><br><br>
-                 <label for="email">Email:</label>
-                 <input type="email" id="email" name="email"><br><br>
-                 <label for="birthday">Birthday:</label>
-                 <input type="date" id="birthday" name="birthday"><br><br>
-                 <input type="submit" value="Submit">
+                    <label for="date">Date of entry:</label>
+                    <input type="date" id="date" name="date"><br><br>
+                    <label for="concepts">Concepts covered:</label>
+                    <input type="text" id="concepts" name="concepts"><br><br>
+                    <label for="jentry">Journal entry</label>
+                    <textarea id="jentry" name="jentry" rows="4" cols="50"></textarea><br><br>
+                    <input type="submit" value="Submit">
                 </fieldset>
-               </form>
+            </form>
             
         </main>
 
