--- a/entryviewer.html
+++ b/entryviewer.html
@@ -34,6 +34,6 @@
             
         </section>
         
-        <script type="module" src="./scripts/main.js>
+        <script type="module" src="./scripts/main.js"></script>
     </body>
 </html>
